[package]
authors = ["Jorge Aparicio <jorge@japaric.io>"]
categories = ["embedded", "hardware-support", "no-std"]
description = "A platform agnostic driver to interface the ENC28J60 (Ethernet controller)"
documentation = "https://docs.rs/enc28j60"
keywords = ["embedded-hal-driver", "Ethernet", "SPI"]
license = "MIT OR Apache-2.0"
name = "enc28j60"
readme = "README.md"
repository = "https://github.com/japaric/enc28j60"
edition = "2021"
version = "0.3.0"

[dependencies]
defmt = { version = "0.3", optional = true }
log = { version = "0.4.14", optional = true }

[dependencies.embedded-hal]
version = "0.2"
features = ["unproven"]
